# fortified

./: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  fortified.console  fortified.desktop.in  fortified.init  fortified.pam  fortified.schemas.in  fortified.spec.in  makedeb.sh
debian/: changelog  control  copyright  dirs  docs  files  fortified.8  fortified.ifupdown  fortified.init  fortified.manpages  fortified.menu  fortified.postinst.debhelper  fortified.postrm.debhelper  fortified.substvars  postinst  postrm  rules  watch
debian/patches/: 00list  01_use_gksu.dpatch  02_detect_dhcp3-server_correctly.dpatch  02_restart_dhcp3-server.dpatch  02_restart_dnsmasq.dpatch  02_support_isc-dhcp4.dpatch  03_xpm_icon.dpatch  05_remove_INSTALL_from_README.dpatch  06_dot_not_hyphen.dpatch  09_fix_ip_up.dpatch  10_dhcp_hook.dpatch  11_desktop_file.dpatch  12_fortified_transparent_icon.dpatch  13_browser_nonroot.dpatch  14_update_non_routables.dpatch  15_update_sv_po.dpatch  17_update_docs_uri.dpatch  18_fix_memleak.dpatch  19_update_it_po.dpatch  20_allow_localhost_when_locked.dpatch  21_locales_failing.dpatch  22_update_desktop_file.dpatch  23_fix_ftbfs_binutils-gold.dpatch
debian/scripts/: get_upstream_version.sh
pixmaps/: Makefile  Makefile.am  Makefile.in  fortified.png.xmp  fortified.xpm
po/: .intltool-merge-cache  ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  az.gmo  az.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  hr.gmo  hr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  (+40 more)
scripts/: Makefile  Makefile.am  Makefile.in  non-routables
src/: Makefile  Makefile.am  Makefile.in  dhcp-server.c  dhcp-server.h  eggtrayicon.c  fortified  fortified.c  fortified.h  globals.h  gui.c  gui.h  hitview.c  hitview.h  logread.c  logread.h  menus.c  menus.h  netfilter-script.c  netfilter-script.h  policyview.c  policyview.h  preferences.c  preferences.glade  preferences.h  savelog.c  savelog.h  scriptwriter.c  scriptwriter.h  service.c  service.h  statusview.c  statusview.h  tray.c  tray.h  util.c  util.h  wizard-choices.c  wizard-choices.h  wizard.c  (+1 more)
src/.deps/: dhcp-server.Po  eggtrayicon.Po  fortified.Po  gui.Po  hitview.Po  logread.Po  menus.Po  netfilter-script.Po  policyview.Po  preferences.Po  savelog.Po  scriptwriter.Po  service.Po  statusview.Po  tray.Po  util.Po  wizard-choices.Po  wizard.Po
src/xpm/: Makefile  Makefile.am  Makefile.in  fortified-pixbufs.h
